--- a/src/index.css
+++ b/src/index.css
@@ -89,4 +89,8 @@
   .tooltip:hover::after {
     @apply block;
   }
+  .grid {
+    mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 70%);
+    -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 70%);
+  }
 }
