--- a/src/index.css
+++ b/src/index.css
@@ -90,11 +90,11 @@
     @apply block;
   }
   .grid {
-    mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 70%);
-    -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 70%);
+    mask-image: radial-gradient(rgba(0, 0, 0, 1) 10%, transparent 70%);
+    -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 10%, transparent 70%);
   }
-  .grid-to-bottom {
+  /* .grid-to-bottom {
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 10%, transparent 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 10%, transparent 100%);
-  }
+  } */
 }
