--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,11 @@
   }
   .grid-gradient-to-bottom {
     mask-image: linear-gradient(to bottom, #000, transparent);
+    -webkit-mask-image: linear-gradient(to bottom, #000, transparent);
+  }
+  .grid-gradient-to-top {
+    mask-image: linear-gradient(to top, #000, transparent);
+    -webkit-mask-image: linear-gradient(to top, #000, transparent);
   }
   /* .grid-to-bottom {
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 10%, transparent 100%);
