--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,22 @@
     mask-image: linear-gradient(to top, #000, transparent);
     -webkit-mask-image: linear-gradient(to top, #000, transparent);
   }
+  .grid-image {
+    background-size: 24px 24px;
+    background-image: linear-gradient(to right, #393953, transparent 1px), linear-gradient(to bottom, #393953, transparent 1px);
+  }
+  .mask-to-bottom {
+    -webkit-mask-image: linear-gradient(to bottom, black, transparent);
+    mask-image: linear-gradient(to bottom, black, transparent);
+  }
+  .mask-to-top {
+    -webkit-mask-image: linear-gradient(to top, black, transparent);
+    mask-image: linear-gradient(to top, black, transparent);
+  }
+  .radial-mask {
+    -webkit-mask-image: radial-gradient(ellipse at center, black, transparent 60%);
+    mask-image: radial-gradient(ellipse at center, black, transparent 60%);
+  }
   /* .grid-to-bottom {
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 10%, transparent 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 10%, transparent 100%);
